# datafalk

./: Dockerfile.api  Dockerfile.worker  docker-compose.yml  ex.md  main.py  pyproject.toml  requirements.txt
app/: main.py  tasks.py  worker.py
app/templates/: index.html  old_index.html
